# SmartInspectPython

./: .gitattributes  .gitignore  CHANGELOG.md  GitCommitUpdates.cmd  GitCompress.cmd  GitIgnoreFix.cmd  GitInit.cmd  LICENSE  README.md  SmartinspectPython.sln  SmartinspectPythonProject.pyproj  _Build_Pip_Package_Instructions.txt  build.bat  builddocs.bat  pyproject.toml.bak  requirements.txt  setup.py
SmartinspectPythonProject/: CHANGELOG.md  MANIFEST.in  README.md  SmartinspectPythonProject.pyproj  build.bat  builddocs.bat  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
SmartinspectPythonProject/docspdoc/: buildEnv.py  make.bat
SmartinspectPythonProject/smartinspectpython/: Session.cs  __init__.py  siargumentnullexception.py  siargumentoutofrangeexception.py  siauto.py  sibinarycontext.py  sibinaryformatter.py  sibinaryviewercontext.py  sicolor.py  siconfiguration.py  siconfigurationtimer.py  siconnectionfoundeventargs.py  siconnectionsbuilder.py  siconnectionsparser.py  siconst.py  sicontrolcommand.py  sicontrolcommandeventargs.py  sicontrolcommandtype.py  sicryptostreamwriter.py  sidataviewercontext.py  sienumcomparable.py  sierroreventargs.py  sifilehelper.py  sifileprotocol.py  sifilerotate.py  sifilerotater.py  sifiltereventargs.py  siformatter.py  sigraphicid.py  sigraphicviewercontext.py  siinfoeventargs.py  siinspectorviewercontext.py  siinvalidconnectionsexception.py  silevel.py  silistviewercontext.py  siloadconfigurationexception.py  siloadconnectionsexception.py  silogentry.py  silogentryeventargs.py  silogentrytype.py  (+50 more)
docspdoc/: make.bat
(+119 files in other folders)
